# FINANCIAL_SIMULATOR

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  docker-compose.yml  skills-lock.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6f4e3f2f9c1a_add_trainer_solution_notes.py  b34e7c2a91e4_init.py
backend/app/: main.py
backend/app/core/: base.py  config.py  db.py  errors.py  grading.py  pagination.py  security.py
backend/app/modules/courses/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/progression/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/quizzes/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/trainer/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/tutor/: client.py  prompts.py  router.py  schemas.py  service.py
backend/app/modules/users/: deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/seed/: __init__.py  __main__.py  loader.py
backend/tests/: conftest.py  test_grading.py  test_security.py  test_tutor.py
content/: curriculum.yaml  levels.yaml
content/lessons/: budgeting-basics.md  saving-basics.md
content/quizzes/: budgeting-quiz.yaml  saving-quiz.yaml
content/trainer/: lease-error-check.yaml  loan-monthly-payment.yaml  revenue-error-check.yaml  (+1 more)
docs/: mvp-todo.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
(+44 files in other folders)
